Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,8 @@
     "## Create a new directory for your repo\n",
     "\n",
     "* Open up your command line (mac: terminal, windows: git bash) \n",
-    "* Navigate to the appropriate directory such as /Documents/Flatiron/Section2_Bash_and_Git (or however you plan to organize your course materials)\n"
+    "* Navigate to the appropriate directory such as /Documents/Flatiron/Section2_Bash_and_Git (or however you plan to organize your course materials)\n",
+    "* mkdir NAME-OF-YOUR-NEW-DIRECTORY"
    ]
   },
   {
